--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.6)
 project("HTML Template")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 enable_testing()
 
 # Value library
@@ -7,8 +8,8 @@ set(value_SOURCES src/value.cpp include/value.hpp)
 add_library(value ${value_SOURCES})
 
 # Template library
-set(template_HEADERS include/ast include/errors include/file include/item include/parser include/position include/scanner include/template include/token)
-set(template_SOURCES src/ast src/errors src/file src/item src/parser src/position src/scanner src/template src/token)
+set(template_HEADERS include/ast include/errors include/escape include/file include/item include/parser include/position include/scanner include/template include/token)
+set(template_SOURCES src/ast src/errors src/escape src/file src/item src/parser src/position src/scanner src/template src/token)
 include_directories(include)
 add_library(html_template ${template_SOURCES} ${template_HEADERS})
 target_link_libraries(html_template value)
@@ -27,6 +28,16 @@ add_test(TemplateTest test_errors)
 add_executable(test_scanner tests/test_scanner.cpp)
 target_link_libraries(test_scanner html_template)
 add_test(TemplateTest test_scanner)
+
+# Test program for parser
+add_executable(test_parser tests/test_parser.cpp)
+target_link_libraries(test_parser html_template)
+add_test(TemplateTest test_parser)
+
+# Test program for escape
+add_executable(test_escape tests/test_escape.cpp)
+target_link_libraries(test_escape html_template)
+add_test(TemplateTest test_escape)
 
 # Test program for html templates
 add_executable(test_template tests/test_template)
